--- a/Personal-Portfolio-App/src/components/NavBar/NavBar.css
+++ b/Personal-Portfolio-App/src/components/NavBar/NavBar.css
@@ -7,7 +7,7 @@
   position: sticky;
   top: 8px;
   z-index: 1000;
-  background: #d9d9da;
+  background: #a6a6a7;
   backdrop-filter: blur(14px);
   -webkit-backdrop-filter: blur(14px);
   background-image: linear-gradient(
@@ -25,7 +25,7 @@
   position: sticky;
   top: 8px;
   z-index: 1000;
-  background: #2a2a2a;
+  background: #606060;
   border-radius: 10px;
   margin-bottom: 13px;
   transition: background 0.3s ease;
